--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           </div>
           <div class="kpi-card text-center">
             <div class="kpi-value">2.500+</div>
-            <div class="kpi-label">Investidores</div>
+            <div class="kpi-label">Clientes</div>
           </div>
           <div class="kpi-card text-center">
             <div class="kpi-value">45</div>
