--- a/pages/admin/dashboard.html
+++ b/pages/admin/dashboard.html
@@ -18,7 +18,7 @@
       <ul class="sidebar-menu">
         <li><a href="dashboard.html" class="active"><i class="bi bi-speedometer2"></i> Dashboard</a></li>
         <li><a href="ofertas.html"><i class="bi bi-megaphone"></i> Ofertas</a></li>
-        <li><a href="investidores.html"><i class="bi bi-people"></i> Investidores</a></li>
+        <li><a href="clientes.html"><i class="bi bi-people"></i> Clientes</a></li>
         <li><a href="kyc-fila.html"><i class="bi bi-person-check"></i> Validacao Cadastro</a></li>
         <li><a href="moderacao.html"><i class="bi bi-shield-check"></i> Moderacao</a></li>
         <li><a href="parceiros.html"><i class="bi bi-building"></i> Parceiros</a></li>
@@ -53,7 +53,7 @@
           <div class="kpi-change positive">+R$ 180k este mes</div>
         </div>
         <div class="kpi-card">
-          <div class="kpi-label">Investidores Ativos</div>
+          <div class="kpi-label">Clientes Ativos</div>
           <div class="kpi-value">2.547</div>
           <div class="kpi-change positive">+127 este mes</div>
         </div>
@@ -240,7 +240,7 @@
       <div class="card mt-20">
         <div class="card-header flex-between">
           <h3 class="card-title">Ultimos Investimentos</h3>
-          <a href="investidores.html" style="color: var(--primary);">Ver todos</a>
+          <a href="clientes.html" style="color: var(--primary);">Ver todos</a>
         </div>
         <div class="table-container">
           <table>
