--- a/pages/admin/imposto-renda.html
+++ b/pages/admin/imposto-renda.html
@@ -18,7 +18,7 @@
       <ul class="sidebar-menu">
         <li><a href="dashboard.html"><i class="bi bi-speedometer2"></i> Dashboard</a></li>
         <li><a href="ofertas.html"><i class="bi bi-megaphone"></i> Ofertas</a></li>
-        <li><a href="investidores.html"><i class="bi bi-people"></i> Investidores</a></li>
+        <li><a href="clientes.html"><i class="bi bi-people"></i> Clientes</a></li>
         <li><a href="kyc-fila.html"><i class="bi bi-person-check"></i> Validacao Cadastro</a></li>
         <li><a href="moderacao.html"><i class="bi bi-shield-check"></i> Moderacao</a></li>
         <li><a href="parceiros.html"><i class="bi bi-building"></i> Parceiros</a></li>
@@ -51,7 +51,7 @@
       <!-- Status Cards -->
       <div class="kpi-grid" style="margin-bottom: 30px;">
         <div class="kpi-card">
-          <div class="kpi-label">Investidores com Movimentacao</div>
+          <div class="kpi-label">Clientes com Movimentacao</div>
           <div class="kpi-value">1.892</div>
           <div class="kpi-change">em 2024</div>
         </div>
@@ -193,7 +193,7 @@
       <!-- Investors with IR Data -->
       <div class="card mt-20">
         <div class="card-header flex-between">
-          <h3 class="card-title">Investidores com Rendimentos em 2024</h3>
+          <h3 class="card-title">Clientes com Rendimentos em 2024</h3>
           <div class="flex gap-10">
             <input type="text" class="form-input" placeholder="Buscar por CPF ou nome..." style="width: 250px;">
             <div class="dropdown" style="position: relative;">
