--- a/pages/admin/moderacao.html
+++ b/pages/admin/moderacao.html
@@ -74,7 +74,7 @@
       <ul class="sidebar-menu">
         <li><a href="dashboard.html"><i class="bi bi-speedometer2"></i> Dashboard</a></li>
         <li><a href="ofertas.html"><i class="bi bi-megaphone"></i> Ofertas</a></li>
-        <li><a href="investidores.html"><i class="bi bi-people"></i> Investidores</a></li>
+        <li><a href="clientes.html"><i class="bi bi-people"></i> Clientes</a></li>
         <li><a href="kyc-fila.html"><i class="bi bi-person-check"></i> Validacao Cadastro</a></li>
         <li><a href="moderacao.html" class="active"><i class="bi bi-shield-check"></i> Moderacao</a></li>
         <li><a href="parceiros.html"><i class="bi bi-building"></i> Parceiros</a></li>
@@ -175,7 +175,7 @@
             Agradecemos a confianca de todos voces!
           </p>
           <div class="preview-box">
-            <strong><i class="bi bi-eye"></i> Preview para Investidores:</strong>
+            <strong><i class="bi bi-eye"></i> Preview para Clientes:</strong>
             <p style="margin-top: 10px; font-size: 0.9rem;">Este comunicado sera enviado para <strong>127 investidores</strong> da oferta TechStart Inovacao.</p>
           </div>
         </div>
@@ -213,7 +213,7 @@
             Isso demonstra a aceitacao do mercado e valida nosso modelo de negocio...
           </p>
           <div class="preview-box">
-            <strong><i class="bi bi-eye"></i> Preview para Investidores:</strong>
+            <strong><i class="bi bi-eye"></i> Preview para Clientes:</strong>
             <p style="margin-top: 10px; font-size: 0.9rem;">Este comunicado sera enviado para <strong>127 investidores</strong> da oferta TechStart Inovacao.</p>
           </div>
         </div>
@@ -260,7 +260,7 @@
             <span style="color: var(--danger); font-weight: bold;">⚠️ Frase detectada: "projetamos um faturamento de R$ 500.000"</span>
           </p>
           <div class="preview-box">
-            <strong><i class="bi bi-eye"></i> Preview para Investidores:</strong>
+            <strong><i class="bi bi-eye"></i> Preview para Clientes:</strong>
             <p style="margin-top: 10px; font-size: 0.9rem;">Este comunicado sera enviado para <strong>89 investidores</strong> da oferta EcoFood Organicos.</p>
           </div>
         </div>
