--- a/pages/admin/oferta-analise.html
+++ b/pages/admin/oferta-analise.html
@@ -18,7 +18,7 @@
       <ul class="sidebar-menu">
         <li><a href="dashboard.html"><i class="bi bi-speedometer2"></i> Dashboard</a></li>
         <li><a href="ofertas.html" class="active"><i class="bi bi-megaphone"></i> Ofertas</a></li>
-        <li><a href="investidores.html"><i class="bi bi-people"></i> Investidores</a></li>
+        <li><a href="clientes.html"><i class="bi bi-people"></i> Clientes</a></li>
         <li><a href="kyc-fila.html"><i class="bi bi-person-check"></i> Validacao Cadastro</a></li>
         <li><a href="moderacao.html"><i class="bi bi-shield-check"></i> Moderacao</a></li>
         <li><a href="parceiros.html"><i class="bi bi-building"></i> Parceiros</a></li>
