--- a/pages/admin/oferta-detalhe.html
+++ b/pages/admin/oferta-detalhe.html
@@ -18,7 +18,7 @@
       <ul class="sidebar-menu">
         <li><a href="dashboard.html"><i class="bi bi-speedometer2"></i> Dashboard</a></li>
         <li><a href="ofertas.html" class="active"><i class="bi bi-megaphone"></i> Ofertas</a></li>
-        <li><a href="investidores.html"><i class="bi bi-people"></i> Investidores</a></li>
+        <li><a href="clientes.html"><i class="bi bi-people"></i> Clientes</a></li>
         <li><a href="kyc-fila.html"><i class="bi bi-person-check"></i> Validacao Cadastro</a></li>
         <li><a href="moderacao.html"><i class="bi bi-shield-check"></i> Moderacao</a></li>
         <li><a href="parceiros.html"><i class="bi bi-building"></i> Parceiros</a></li>
@@ -87,7 +87,7 @@
       <!-- KPIs -->
       <div class="kpi-grid" style="margin-bottom: 30px;">
         <div class="kpi-card">
-          <div class="kpi-label">Investidores</div>
+          <div class="kpi-label">Clientes</div>
           <div class="kpi-value">127</div>
           <div class="kpi-change positive">+12 esta semana</div>
         </div>
@@ -188,10 +188,10 @@
         </div>
       </div>
 
-      <!-- Lista de Investidores -->
+      <!-- Lista de Clientes -->
       <div class="card mt-20">
         <div class="card-header flex-between">
-          <h3 class="card-title"><i class="bi bi-people"></i> Investidores da Oferta</h3>
+          <h3 class="card-title"><i class="bi bi-people"></i> Clientes da Oferta</h3>
           <div class="flex gap-10">
             <input type="text" class="form-input" placeholder="Buscar..." style="width: 200px;">
             <button class="btn btn-outline btn-sm" onclick="showModal('exportandoModal')"><i class="bi bi-download"></i> Exportar</button>
@@ -219,7 +219,7 @@
                 <td>1.1%</td>
                 <td>18/01/2026</td>
                 <td><span class="badge badge-warning">Em Desistencia</span></td>
-                <td><a href="investidor-detalhe.html" class="btn btn-outline btn-sm"><i class="bi bi-eye"></i></a></td>
+                <td><a href="cliente-detalhe.html" class="btn btn-outline btn-sm"><i class="bi bi-eye"></i></a></td>
               </tr>
               <tr>
                 <td>
@@ -230,7 +230,7 @@
                 <td>4.0%</td>
                 <td>10/01/2026</td>
                 <td><span class="badge badge-success">Confirmado</span></td>
-                <td><a href="investidor-detalhe.html" class="btn btn-outline btn-sm"><i class="bi bi-eye"></i></a></td>
+                <td><a href="cliente-detalhe.html" class="btn btn-outline btn-sm"><i class="bi bi-eye"></i></a></td>
               </tr>
               <tr>
                 <td>
@@ -241,7 +241,7 @@
                 <td>3.0%</td>
                 <td>08/01/2026</td>
                 <td><span class="badge badge-success">Confirmado</span></td>
-                <td><a href="investidor-detalhe.html" class="btn btn-outline btn-sm"><i class="bi bi-eye"></i></a></td>
+                <td><a href="cliente-detalhe.html" class="btn btn-outline btn-sm"><i class="bi bi-eye"></i></a></td>
               </tr>
               <tr>
                 <td>
@@ -252,7 +252,7 @@
                 <td>2.5%</td>
                 <td>05/01/2026</td>
                 <td><span class="badge badge-success">Confirmado</span></td>
-                <td><a href="investidor-detalhe.html" class="btn btn-outline btn-sm"><i class="bi bi-eye"></i></a></td>
+                <td><a href="cliente-detalhe.html" class="btn btn-outline btn-sm"><i class="bi bi-eye"></i></a></td>
               </tr>
               <tr style="background: #fee2e2;">
                 <td>
@@ -263,7 +263,7 @@
                 <td>-</td>
                 <td>03/01/2026</td>
                 <td><span class="badge badge-danger">Desistiu</span></td>
-                <td><a href="investidor-detalhe.html" class="btn btn-outline btn-sm"><i class="bi bi-eye"></i></a></td>
+                <td><a href="cliente-detalhe.html" class="btn btn-outline btn-sm"><i class="bi bi-eye"></i></a></td>
               </tr>
             </tbody>
           </table>
