--- a/pages/admin/ofertas.html
+++ b/pages/admin/ofertas.html
@@ -17,7 +17,7 @@
       <ul class="sidebar-menu">
         <li><a href="dashboard.html"><i class="bi bi-speedometer2"></i> Dashboard</a></li>
         <li><a href="ofertas.html" class="active"><i class="bi bi-megaphone"></i> Ofertas</a></li>
-        <li><a href="investidores.html"><i class="bi bi-people"></i> Investidores</a></li>
+        <li><a href="clientes.html"><i class="bi bi-people"></i> Clientes</a></li>
         <li><a href="kyc-fila.html"><i class="bi bi-person-check"></i> Validacao Cadastro</a></li>
         <li><a href="moderacao.html"><i class="bi bi-shield-check"></i> Moderacao</a></li>
         <li><a href="parceiros.html"><i class="bi bi-building"></i> Parceiros</a></li>
@@ -212,7 +212,7 @@
                   <th>Parceiro</th>
                   <th>Meta</th>
                   <th>Captado</th>
-                  <th>Investidores</th>
+                  <th>Clientes</th>
                   <th>Dias Restantes</th>
                   <th>Status</th>
                   <th>Acoes</th>
@@ -326,7 +326,7 @@
                   <th>Parceiro</th>
                   <th>Meta</th>
                   <th>Captado</th>
-                  <th>Investidores</th>
+                  <th>Clientes</th>
                   <th>Periodo</th>
                   <th>Resultado</th>
                   <th>Acoes</th>
