--- a/pages/admin/parceiros.html
+++ b/pages/admin/parceiros.html
@@ -17,7 +17,7 @@
       <ul class="sidebar-menu">
         <li><a href="dashboard.html"><i class="bi bi-speedometer2"></i> Dashboard</a></li>
         <li><a href="ofertas.html"><i class="bi bi-megaphone"></i> Ofertas</a></li>
-        <li><a href="investidores.html"><i class="bi bi-people"></i> Investidores</a></li>
+        <li><a href="clientes.html"><i class="bi bi-people"></i> Clientes</a></li>
         <li><a href="kyc-fila.html"><i class="bi bi-person-check"></i> Validacao Cadastro</a></li>
         <li><a href="moderacao.html"><i class="bi bi-shield-check"></i> Moderacao</a></li>
         <li><a href="parceiros.html" class="active"><i class="bi bi-building"></i> Parceiros</a></li>
@@ -82,7 +82,7 @@
                 <td>2</td>
                 <td>R$ 875.000</td>
                 <td><span class="badge badge-success">Ativo</span></td>
-                <td><button class="btn btn-outline btn-sm">Ver</button></td>
+                <td><a href="parceiro-detalhe.html" class="btn btn-outline btn-sm">Ver</a></td>
               </tr>
               <tr>
                 <td>
@@ -94,7 +94,7 @@
                 <td>1</td>
                 <td>R$ 180.000</td>
                 <td><span class="badge badge-success">Ativo</span></td>
-                <td><button class="btn btn-outline btn-sm">Ver</button></td>
+                <td><a href="parceiro-detalhe.html" class="btn btn-outline btn-sm">Ver</a></td>
               </tr>
               <tr>
                 <td>
@@ -106,7 +106,7 @@
                 <td>1</td>
                 <td>R$ 562.500</td>
                 <td><span class="badge badge-success">Ativo</span></td>
-                <td><button class="btn btn-outline btn-sm">Ver</button></td>
+                <td><a href="parceiro-detalhe.html" class="btn btn-outline btn-sm">Ver</a></td>
               </tr>
               <tr>
                 <td>
@@ -118,7 +118,7 @@
                 <td>3</td>
                 <td>R$ 2.100.000</td>
                 <td><span class="badge badge-secondary">Inativo</span></td>
-                <td><button class="btn btn-outline btn-sm">Ver</button></td>
+                <td><a href="parceiro-detalhe.html" class="btn btn-outline btn-sm">Ver</a></td>
               </tr>
             </tbody>
           </table>
