--- a/pages/admin/relatorio-visualizar.html
+++ b/pages/admin/relatorio-visualizar.html
@@ -148,7 +148,7 @@
       <ul class="sidebar-menu">
         <li><a href="dashboard.html"><i class="bi bi-speedometer2"></i> Dashboard</a></li>
         <li><a href="ofertas.html"><i class="bi bi-megaphone"></i> Ofertas</a></li>
-        <li><a href="investidores.html"><i class="bi bi-people"></i> Investidores</a></li>
+        <li><a href="clientes.html"><i class="bi bi-people"></i> Clientes</a></li>
         <li><a href="kyc-fila.html"><i class="bi bi-person-check"></i> Validacao Cadastro</a></li>
         <li><a href="moderacao.html"><i class="bi bi-shield-check"></i> Moderacao</a></li>
         <li><a href="parceiros.html"><i class="bi bi-building"></i> Parceiros</a></li>
@@ -169,7 +169,7 @@
           <a href="relatorios.html" class="btn btn-outline btn-sm"><i class="bi bi-arrow-left"></i></a>
           <div>
             <h1 class="page-title">Visualizar Relatorio</h1>
-            <p class="text-muted">Relatorio de Investidores por Oferta</p>
+            <p class="text-muted">Relatorio de Clientes por Oferta</p>
           </div>
         </div>
       </div>
@@ -217,7 +217,7 @@
           <!-- Report Header -->
           <div class="report-header">
             <div class="report-logo">CI</div>
-            <h1 class="report-title">Relatorio de Investidores</h1>
+            <h1 class="report-title">Relatorio de Clientes</h1>
             <p class="report-subtitle">TechStart Inovacao - Janeiro 2026</p>
             <p class="text-muted" style="font-size: 0.875rem; margin-top: 10px;">
               Gerado em: 19/01/2026 as 15:30
@@ -230,7 +230,7 @@
             <div class="report-summary">
               <div class="summary-card">
                 <div class="summary-value">127</div>
-                <div class="summary-label">Total de Investidores</div>
+                <div class="summary-label">Total de Clientes</div>
               </div>
               <div class="summary-card">
                 <div class="summary-value" style="color: var(--success);">R$ 375.000</div>
@@ -290,7 +290,7 @@
 
           <!-- Top Investors -->
           <div class="report-section">
-            <h2 class="report-section-title"><i class="bi bi-trophy"></i> Top 10 Investidores</h2>
+            <h2 class="report-section-title"><i class="bi bi-trophy"></i> Top 10 Clientes</h2>
             <table class="report-table">
               <thead>
                 <tr>
@@ -405,7 +405,7 @@
               <thead>
                 <tr>
                   <th>Data</th>
-                  <th>Novos Investidores</th>
+                  <th>Novos Clientes</th>
                   <th>Valor Captado</th>
                   <th>Desistencias</th>
                   <th>Saldo</th>
