--- a/pages/parceiro-login.html
+++ b/pages/parceiro-login.html
@@ -32,7 +32,7 @@
           <label style="display: flex; align-items: center; gap: 8px;">
             <input type="checkbox" checked> Lembrar-me
           </label>
-          <a href="#" style="color: var(--primary);">Esqueci a senha</a>
+          <a href="recuperar-senha-parceiro.html" style="color: var(--primary);">Esqueci a senha</a>
         </div>
 
         <button type="submit" class="btn btn-primary btn-block btn-lg">Entrar</button>
