--- a/pages/parceiro/investimento-detalhe.html
+++ b/pages/parceiro/investimento-detalhe.html
@@ -19,7 +19,7 @@
         <li><a href="dashboard.html"><i class="bi bi-speedometer2"></i> Dashboard</a></li>
         <li><a href="minhas-ofertas.html"><i class="bi bi-megaphone"></i> Minhas Ofertas</a></li>
         <li><a href="comunicados.html"><i class="bi bi-chat-square-text"></i> Comunicados</a></li>
-        <li><a href="investidores.html"><i class="bi bi-people"></i> Investidores</a></li>
+        <li><a href="clientes.html"><i class="bi bi-people"></i> Clientes</a></li>
         <li><a href="investimentos.html" class="active"><i class="bi bi-wallet2"></i> Investimentos</a></li>
         <li><a href="documentos.html"><i class="bi bi-folder"></i> Documentos</a></li>
         <li><a href="imposto-renda.html"><i class="bi bi-file-earmark-text"></i> Imposto de Renda</a></li>
@@ -121,7 +121,7 @@
           <div class="alert alert-info mt-15" style="padding: 10px; font-size: 0.875rem;">
             <i class="bi bi-info-circle"></i> Dados completos do investidor serao liberados apos o encerramento da oferta (RCVM 88/2022).
           </div>
-          <a href="investidores.html" class="btn btn-outline btn-sm mt-10"><i class="bi bi-person"></i> Ver Perfil do Investidor</a>
+          <a href="clientes.html" class="btn btn-outline btn-sm mt-10"><i class="bi bi-person"></i> Ver Perfil do Investidor</a>
         </div>
       </div>
 
