--- a/pages/parceiro/minhas-ofertas.html
+++ b/pages/parceiro/minhas-ofertas.html
@@ -19,7 +19,7 @@
         <li><a href="dashboard.html"><i class="bi bi-speedometer2"></i> Dashboard</a></li>
         <li><a href="minhas-ofertas.html" class="active"><i class="bi bi-megaphone"></i> Minhas Ofertas</a></li>
         <li><a href="comunicados.html"><i class="bi bi-chat-square-text"></i> Comunicados</a></li>
-        <li><a href="investidores.html"><i class="bi bi-people"></i> Investidores</a></li>
+        <li><a href="clientes.html"><i class="bi bi-people"></i> Clientes</a></li>
         <li><a href="investimentos.html"><i class="bi bi-wallet2"></i> Investimentos</a></li>
         <li><a href="documentos.html"><i class="bi bi-folder"></i> Documentos</a></li>
         <li><a href="imposto-renda.html"><i class="bi bi-file-earmark-text"></i> Imposto de Renda</a></li>
@@ -94,7 +94,7 @@
         <div class="kpi-grid mt-20" style="grid-template-columns: repeat(4, 1fr);">
           <div style="text-align: center; padding: 15px; background: var(--bg); border-radius: var(--radius);">
             <div style="font-size: 1.5rem; font-weight: bold;">127</div>
-            <small class="text-muted">Investidores</small>
+            <small class="text-muted">Clientes</small>
           </div>
           <div style="text-align: center; padding: 15px; background: var(--bg); border-radius: var(--radius);">
             <div style="font-size: 1.5rem; font-weight: bold;">R$ 2.953</div>
@@ -112,7 +112,7 @@
 
         <div class="flex gap-10 mt-20">
           <a href="oferta-detalhe.html?id=1" class="btn btn-primary"><i class="bi bi-eye"></i> Ver Detalhes</a>
-          <a href="investidores.html?oferta=1" class="btn btn-outline"><i class="bi bi-people"></i> Investidores</a>
+          <a href="clientes.html?oferta=1" class="btn btn-outline"><i class="bi bi-people"></i> Clientes</a>
           <a href="relatorios.html?oferta=1" class="btn btn-outline"><i class="bi bi-bar-chart"></i> Relatorios</a>
         </div>
       </div>
