--- a/pages/parceiro/relatorios.html
+++ b/pages/parceiro/relatorios.html
@@ -18,7 +18,7 @@
         <li><a href="dashboard.html"><i class="bi bi-speedometer2"></i> Dashboard</a></li>
         <li><a href="minhas-ofertas.html"><i class="bi bi-megaphone"></i> Minhas Ofertas</a></li>
         <li><a href="comunicados.html"><i class="bi bi-chat-square-text"></i> Comunicados</a></li>
-        <li><a href="investidores.html"><i class="bi bi-people"></i> Investidores</a></li>
+        <li><a href="clientes.html"><i class="bi bi-people"></i> Clientes</a></li>
         <li><a href="investimentos.html"><i class="bi bi-wallet2"></i> Investimentos</a></li>
         <li><a href="documentos.html"><i class="bi bi-folder"></i> Documentos</a></li>
         <li><a href="imposto-renda.html"><i class="bi bi-file-earmark-text"></i> Imposto de Renda</a></li>
@@ -74,11 +74,11 @@
             </div>
             <div class="flex-between" style="padding: 15px; background: var(--bg); border-radius: var(--radius);">
               <div>
-                <strong>Lista de Investidores</strong>
+                <strong>Lista de Clientes</strong>
                 <p class="text-muted" style="font-size: 0.875rem;">Todos os investidores da oferta</p>
               </div>
               <div class="flex gap-10">
-                <a href="investidores.html" class="btn btn-primary btn-sm"><i class="bi bi-eye"></i> Visualizar</a>
+                <a href="clientes.html" class="btn btn-primary btn-sm"><i class="bi bi-eye"></i> Visualizar</a>
                 <button class="btn btn-outline btn-sm" onclick="showModal('gerandoExcelModal')"><i class="bi bi-file-earmark-excel"></i></button>
                 <button class="btn btn-outline btn-sm" onclick="showModal('gerandoPDFModal')"><i class="bi bi-file-earmark-pdf"></i></button>
               </div>
@@ -86,7 +86,7 @@
             <div class="flex-between" style="padding: 15px; background: var(--bg); border-radius: var(--radius);">
               <div>
                 <strong>Desistencias</strong>
-                <p class="text-muted" style="font-size: 0.875rem;">Investidores que desistiram</p>
+                <p class="text-muted" style="font-size: 0.875rem;">Clientes que desistiram</p>
               </div>
               <div class="flex gap-10">
                 <button class="btn btn-primary btn-sm" onclick="showModal('desistenciasModal')"><i class="bi bi-eye"></i> Visualizar</button>
@@ -119,7 +119,7 @@
             </div>
             <div class="kpi-card">
               <div class="flex-between">
-                <span class="kpi-label">Novos Investidores Hoje</span>
+                <span class="kpi-label">Novos Clientes Hoje</span>
                 <strong>3</strong>
               </div>
             </div>
