--- a/pages/investidor/investimento-detalhe.html
+++ b/pages/investidor/investimento-detalhe.html
@@ -18,8 +18,7 @@
         <li><a href="dashboard.html"><i class="bi bi-speedometer2"></i> Dashboard</a></li>
         <li><a href="ofertas.html"><i class="bi bi-megaphone"></i> Ofertas</a></li>
         <li><a href="minhas-ordens.html"><i class="bi bi-clock-history"></i> Minhas Ordens</a></li>
-        <li><a href="meus-investimentos.html" class="active"><i class="bi bi-briefcase"></i> Meu Portfolio</a></li>
-        <li><a href="carteira.html"><i class="bi bi-wallet2"></i> Carteira</a></li>
+        <li><a href="carteira.html"><i class="bi bi-wallet2"></i> Minha Carteira</a></li>
         <li><a href="extrato.html"><i class="bi bi-list-ul"></i> Extrato</a></li>
         <li><a href="documentos.html"><i class="bi bi-folder"></i> Documentos</a></li>
         <li><a href="imposto-renda.html"><i class="bi bi-file-earmark-text"></i> Imposto de Renda</a></li>
@@ -35,7 +34,7 @@
 
       <div class="page-header">
         <div class="flex gap-10" style="align-items: center;">
-          <a href="meus-investimentos.html" class="btn btn-outline btn-sm"><i class="bi bi-arrow-left"></i></a>
+          <a href="carteira.html" class="btn btn-outline btn-sm"><i class="bi bi-arrow-left"></i></a>
           <div>
             <h1 class="page-title">TechStart Inovacao</h1>
             <p class="text-muted">Detalhe do seu investimento</p>
