--- a/pages/investidor/oferta-detalhe.html
+++ b/pages/investidor/oferta-detalhe.html
@@ -18,8 +18,7 @@
         <li><a href="dashboard.html"><i class="bi bi-speedometer2"></i> Dashboard</a></li>
         <li><a href="ofertas.html" class="active"><i class="bi bi-megaphone"></i> Ofertas</a></li>
         <li><a href="minhas-ordens.html"><i class="bi bi-clock-history"></i> Minhas Ordens</a></li>
-        <li><a href="meus-investimentos.html"><i class="bi bi-briefcase"></i> Meu Portfolio</a></li>
-        <li><a href="carteira.html"><i class="bi bi-wallet2"></i> Carteira</a></li>
+        <li><a href="carteira.html"><i class="bi bi-wallet2"></i> Minha Carteira</a></li>
         <li><a href="extrato.html"><i class="bi bi-list-ul"></i> Extrato</a></li>
         <li><a href="documentos.html"><i class="bi bi-folder"></i> Documentos</a></li>
         <li><a href="imposto-renda.html"><i class="bi bi-file-earmark-text"></i> Imposto de Renda</a></li>
@@ -109,7 +108,7 @@
                 <div class="kpi-value" style="font-size: 1.25rem; color: var(--success);">R$ 375.000</div>
               </div>
               <div class="kpi-card">
-                <div class="kpi-label">Investidores</div>
+                <div class="kpi-label">Clientes</div>
                 <div class="kpi-value" style="font-size: 1.25rem;">127</div>
               </div>
               <div class="kpi-card">
