--- a/pages/parceiro/comunicados.html
+++ b/pages/parceiro/comunicados.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Comunicados aos Investidores - Parceiro - CrowdInvest</title>
+  <title>Comunicados aos Clientes - Parceiro - CrowdInvest</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../../css/style.css">
   <style>
@@ -35,7 +35,7 @@
         <li><a href="dashboard.html"><i class="bi bi-speedometer2"></i> Dashboard</a></li>
         <li><a href="minhas-ofertas.html"><i class="bi bi-megaphone"></i> Minhas Ofertas</a></li>
         <li><a href="comunicados.html" class="active"><i class="bi bi-chat-square-text"></i> Comunicados</a></li>
-        <li><a href="investidores.html"><i class="bi bi-people"></i> Investidores</a></li>
+        <li><a href="clientes.html"><i class="bi bi-people"></i> Clientes</a></li>
         <li><a href="investimentos.html"><i class="bi bi-wallet2"></i> Investimentos</a></li>
         <li><a href="documentos.html"><i class="bi bi-folder"></i> Documentos</a></li>
         <li><a href="relatorios.html"><i class="bi bi-bar-chart"></i> Relatorios</a></li>
@@ -50,7 +50,7 @@
 
       <div class="page-header">
         <div>
-          <h1 class="page-title">Comunicados aos Investidores</h1>
+          <h1 class="page-title">Comunicados aos Clientes</h1>
           <p class="text-muted">Envie atualizacoes para seus investidores (com moderacao)</p>
         </div>
         <button class="btn btn-primary" onclick="showModal('novoComunicadoModal')">
