--- a/pages/parceiro/dashboard.html
+++ b/pages/parceiro/dashboard.html
@@ -19,7 +19,7 @@
         <li><a href="dashboard.html" class="active"><i class="bi bi-speedometer2"></i> Dashboard</a></li>
         <li><a href="minhas-ofertas.html"><i class="bi bi-megaphone"></i> Minhas Ofertas</a></li>
         <li><a href="comunicados.html"><i class="bi bi-chat-square-text"></i> Comunicados</a></li>
-        <li><a href="investidores.html"><i class="bi bi-people"></i> Investidores</a></li>
+        <li><a href="clientes.html"><i class="bi bi-people"></i> Clientes</a></li>
         <li><a href="investimentos.html"><i class="bi bi-wallet2"></i> Investimentos</a></li>
         <li><a href="documentos.html"><i class="bi bi-folder"></i> Documentos</a></li>
         <li><a href="imposto-renda.html"><i class="bi bi-file-earmark-text"></i> Imposto de Renda</a></li>
@@ -73,7 +73,7 @@
           <div class="kpi-change positive">+R$ 45.000 esta semana</div>
         </div>
         <div class="kpi-card">
-          <div class="kpi-label">Investidores</div>
+          <div class="kpi-label">Clientes</div>
           <div class="kpi-value">127</div>
           <div class="kpi-change positive">+12 esta semana</div>
         </div>
@@ -98,8 +98,8 @@
         <!-- Recent Investors -->
         <div class="card">
           <div class="card-header flex-between">
-            <h3 class="card-title">Ultimos Investidores</h3>
-            <a href="investidores.html" style="color: var(--primary);">Ver todos</a>
+            <h3 class="card-title">Ultimos Clientes</h3>
+            <a href="clientes.html" style="color: var(--primary);">Ver todos</a>
           </div>
           <div class="table-container">
             <table>
@@ -208,10 +208,10 @@
           </div>
         </div>
 
-        <!-- Distribuicao de Investidores -->
+        <!-- Distribuicao de Clientes -->
         <div class="card mt-20">
           <div class="card-header">
-            <h3 class="card-title"><i class="bi bi-pie-chart"></i> Investidores por Faixa</h3>
+            <h3 class="card-title"><i class="bi bi-pie-chart"></i> Clientes por Faixa</h3>
           </div>
           <div class="text-center" style="padding: 20px;">
             <div style="position: relative; width: 150px; height: 150px; border-radius: 50%; background: conic-gradient(#059669 0deg 162deg, #22c55e 162deg 270deg, #86efac 270deg 360deg); margin: 0 auto;">
