--- a/pages/parceiro/imposto-renda.html
+++ b/pages/parceiro/imposto-renda.html
@@ -19,7 +19,7 @@
         <li><a href="dashboard.html"><i class="bi bi-speedometer2"></i> Dashboard</a></li>
         <li><a href="minhas-ofertas.html"><i class="bi bi-megaphone"></i> Minhas Ofertas</a></li>
         <li><a href="comunicados.html"><i class="bi bi-chat-square-text"></i> Comunicados</a></li>
-        <li><a href="investidores.html"><i class="bi bi-people"></i> Investidores</a></li>
+        <li><a href="clientes.html"><i class="bi bi-people"></i> Clientes</a></li>
         <li><a href="investimentos.html"><i class="bi bi-wallet2"></i> Investimentos</a></li>
         <li><a href="documentos.html"><i class="bi bi-folder"></i> Documentos</a></li>
         <li><a href="imposto-renda.html" class="active"><i class="bi bi-file-earmark-text"></i> Imposto de Renda</a></li>
@@ -60,7 +60,7 @@
           <div class="kpi-change">em 2024</div>
         </div>
         <div class="kpi-card">
-          <div class="kpi-label">Investidores</div>
+          <div class="kpi-label">Clientes</div>
           <div class="kpi-value">127</div>
           <div class="kpi-change">na sua oferta</div>
         </div>
@@ -109,13 +109,13 @@
               </div>
             </div>
 
-            <!-- Lista de Investidores -->
+            <!-- Lista de Clientes -->
             <div style="padding: 20px; background: var(--bg); border-radius: var(--radius);">
               <div class="flex-between" style="margin-bottom: 10px;">
                 <div class="flex gap-10" style="align-items: center;">
                   <i class="bi bi-people" style="font-size: 1.5rem; color: var(--success);"></i>
                   <div>
-                    <strong>Lista de Investidores com CPF</strong>
+                    <strong>Lista de Clientes com CPF</strong>
                     <p class="text-muted" style="font-size: 0.875rem;">Para declaracao de participacoes</p>
                   </div>
                 </div>
@@ -167,7 +167,7 @@
                   <i class="bi bi-check" style="color: var(--success);"></i>
                 </div>
                 <div>
-                  <strong>Registro dos Investidores</strong>
+                  <strong>Registro dos Clientes</strong>
                   <p class="text-muted" style="font-size: 0.875rem;">Manter cadastro atualizado de todos os socios minoritarios</p>
                 </div>
               </div>
@@ -240,10 +240,10 @@
         </div>
       </div>
 
-      <!-- Quadro de Investidores para IR -->
+      <!-- Quadro de Clientes para IR -->
       <div class="card mt-20">
         <div class="card-header flex-between">
-          <h3 class="card-title"><i class="bi bi-people"></i> Quadro de Investidores - Ano 2024</h3>
+          <h3 class="card-title"><i class="bi bi-people"></i> Quadro de Clientes - Ano 2024</h3>
           <div class="flex gap-10">
             <button class="btn btn-outline btn-sm" onclick="showModal('downloadPdfModal')">
               <i class="bi bi-download"></i> Baixar PDF
