--- a/pages/parceiro/nova-oferta-step2.html
+++ b/pages/parceiro/nova-oferta-step2.html
@@ -19,7 +19,7 @@
         <li><a href="dashboard.html"><i class="bi bi-speedometer2"></i> Dashboard</a></li>
         <li><a href="minhas-ofertas.html" class="active"><i class="bi bi-megaphone"></i> Minhas Ofertas</a></li>
         <li><a href="comunicados.html"><i class="bi bi-chat-square-text"></i> Comunicados</a></li>
-        <li><a href="investidores.html"><i class="bi bi-people"></i> Investidores</a></li>
+        <li><a href="clientes.html"><i class="bi bi-people"></i> Clientes</a></li>
         <li><a href="investimentos.html"><i class="bi bi-wallet2"></i> Investimentos</a></li>
         <li><a href="documentos.html"><i class="bi bi-folder"></i> Documentos</a></li>
         <li><a href="imposto-renda.html"><i class="bi bi-file-earmark-text"></i> Imposto de Renda</a></li>
@@ -124,7 +124,7 @@
               </select>
             </div>
             <div class="form-group">
-              <label class="form-label">Direitos dos Investidores *</label>
+              <label class="form-label">Direitos dos Clientes *</label>
               <select class="form-input" required>
                 <option value="">Selecione...</option>
                 <option value="tag-along" selected>Tag-Along + Voto em Assembleias</option>
