--- a/pages/parceiro/oferta-detalhe.html
+++ b/pages/parceiro/oferta-detalhe.html
@@ -19,7 +19,7 @@
         <li><a href="dashboard.html"><i class="bi bi-speedometer2"></i> Dashboard</a></li>
         <li><a href="minhas-ofertas.html" class="active"><i class="bi bi-megaphone"></i> Minhas Ofertas</a></li>
         <li><a href="comunicados.html"><i class="bi bi-chat-square-text"></i> Comunicados</a></li>
-        <li><a href="investidores.html"><i class="bi bi-people"></i> Investidores</a></li>
+        <li><a href="clientes.html"><i class="bi bi-people"></i> Clientes</a></li>
         <li><a href="investimentos.html"><i class="bi bi-wallet2"></i> Investimentos</a></li>
         <li><a href="documentos.html"><i class="bi bi-folder"></i> Documentos</a></li>
         <li><a href="imposto-renda.html"><i class="bi bi-file-earmark-text"></i> Imposto de Renda</a></li>
@@ -80,7 +80,7 @@
       <!-- KPIs -->
       <div class="kpi-grid" style="margin-bottom: 30px;">
         <div class="kpi-card">
-          <div class="kpi-label">Investidores</div>
+          <div class="kpi-label">Clientes</div>
           <div class="kpi-value">127</div>
           <div class="kpi-change positive"><i class="bi bi-arrow-up"></i> +12 esta semana</div>
         </div>
@@ -183,11 +183,11 @@
         </div>
       </div>
 
-      <!-- Lista de Investidores -->
+      <!-- Lista de Clientes -->
       <div class="card mt-20">
         <div class="card-header flex-between">
-          <h3 class="card-title"><i class="bi bi-people"></i> Ultimos Investidores</h3>
-          <a href="investidores.html" class="btn btn-outline btn-sm">Ver Todos <i class="bi bi-arrow-right"></i></a>
+          <h3 class="card-title"><i class="bi bi-people"></i> Ultimos Clientes</h3>
+          <a href="clientes.html" class="btn btn-outline btn-sm">Ver Todos <i class="bi bi-arrow-right"></i></a>
         </div>
         <div class="table-container">
           <table>
@@ -245,7 +245,7 @@
       <!-- Atualizacoes -->
       <div class="card mt-20">
         <div class="card-header flex-between">
-          <h3 class="card-title"><i class="bi bi-newspaper"></i> Atualizacoes para Investidores</h3>
+          <h3 class="card-title"><i class="bi bi-newspaper"></i> Atualizacoes para Clientes</h3>
           <button class="btn btn-primary btn-sm" onclick="showModal('novaAtualizacaoModal')"><i class="bi bi-plus-lg"></i> Nova</button>
         </div>
         <div style="display: flex; flex-direction: column; gap: 15px;">
